--- a/movie2.html
+++ b/movie2.html
@@ -7,7 +7,7 @@
 <body>
     <h1>The Shawshank Redemption</h1>
     <p>The Shawshank Redemption is a 1994 American drama film written and directed by Frank Darabont, based on the 1982 Stephen King novella Rita Hayworth and Shawshank Redemption. It tells the story of banker Andy Dufresne, who is sentenced to life in Shawshank State Penitentiary for the murders of his wife and her lover, despite his claims of innocence.</p>
-    <img src="https://ibb.co/ygDJLSy" alt="The Shawshank Redemption Poster">
+    <img src="https://ibb.co/dGv9n8N" alt="The Shawshank Redemption Poster">
     <iframe width="560" height="315" src="https://www.youtube.com/watch?v=NmzuHjWmXOc" frameborder="0" allowfullscreen></iframe>
     <h2>Main Actors:</h2>
     <ul>
