--- a/movie2.html
+++ b/movie2.html
@@ -7,8 +7,8 @@
 <body>
     <h1>The Shawshank Redemption</h1>
     <p>The Shawshank Redemption is a 1994 American drama film written and directed by Frank Darabont, based on the 1982 Stephen King novella Rita Hayworth and Shawshank Redemption. It tells the story of banker Andy Dufresne, who is sentenced to life in Shawshank State Penitentiary for the murders of his wife and her lover, despite his claims of innocence.</p>
-    <img src="https://ibb.co/dGv9n8N" alt="The Shawshank Redemption Poster">
-    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=NmzuHjWmXOc" frameborder="0" allowfullscreen></iframe>
+    <img src="https://i.ibb.co/nzy2hxX/shawshank-commit.jpg" alt="The Shawshank Redemption Poster">
+    <iframe width="1690" height="674" src="https://www.youtube.com/embed/NmzuHjWmXOc" title="The Shawshank Redemption (1994) Official Trailer #1 - Morgan Freeman Movie HD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
     <h2>Main Actors:</h2>
     <ul>
         <li>Tim Robbins</li>
