--- a/movie1.html
+++ b/movie1.html
@@ -7,8 +7,8 @@
 <body>
     <h1>The Godfather</h1>
     <p>The Godfather is a 1972 American crime film directed by Francis Ford Coppola, produced by Albert S. Ruddy, and based on Mario Puzo's best-selling 1969 novel of the same name. It is the first installment in The Godfather trilogy.</p>
-    <img src="https://ibb.co/jTwPTQD" alt="The Godfather Poster">
-    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=sY1S34973zA" frameborder="0" allowfullscreen></iframe>
+    <img src="https://i.ibb.co/6mt7mTF/The-Godfather-Poster.jpg" alt="The Godfather Poster">
+	<iframe width="1690" height="674" src="https://www.youtube.com/embed/rqGJyUB1Q3s" title="The Godfather | Official Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <h2>Main Actors:</h2>
     <ul>
         <li>Marlon Brando</li>
